apps/prod2/tekton/configs/triggers/event-listeners/http-route-event-listener.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: el-github
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: infra
  hostnames:
    - "${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "${path_for_el_github}"
      backendRefs:
        - name: el-github
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: el-harbor
spec:
  parentRefs:
    - kind: Gateway
      name: internal-gateway
      namespace: infra
  hostnames:
    - "${domain_internal}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "${path_for_el_harbor}"
      backendRefs:
        - name: el-harbor
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: el-tibuild
spec:
  parentRefs:
    - kind: Gateway
      name: internal-gateway
      namespace: infra
  hostnames:
    - "${domain_internal}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "${path_for_el_tibuild}"
      backendRefs:
        - name: el-tibuild
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
