apps/prod2/tekton/configs/triggers/event-listeners/ingress-event-listener.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-harbor
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "${domain_internal}"
      http:
        paths:
          - pathType: Prefix
            path: "${path_for_el_harbor}(/|$)(.*)"
            backend:
              service:
                name: el-harbor
                port:
                  name: http-listener
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-tibuild
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "${domain_internal}"
      http:
        paths:
          - pathType: Prefix
            path: "${path_for_el_tibuild}(/|$)(.*)"
            backend:
              service:
                name: el-tibuild
                port:
                  name: http-listener
